--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/tgaff/tunely#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "bower": "^1.7.9",
-    "express": "^4.13.3"
+    "express": "^4.14.0",
+    "mongoose": "^4.6.7"
   }
 }
